<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingEnd="4dp"
    android:paddingRight="4dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llApplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivExpander"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:alpha="0.5"
                android:src="?attr/expander" />

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="?android:attr/listPreferredItemHeightSmall"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:textAppearance="@style/TextMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvHosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:textAppearance="@style/TextSmall"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvRemarkMessaging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/title_messaging"
        android:textAppearance="@style/TextSmall"
        android:textStyle="italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvRemarkDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/title_download"
        android:textAppearance="@style/TextSmall"
        android:textStyle="italic"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llConfiguration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvUid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextSmall" />

        <TextView
            android:id="@+id/tvPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextSmall" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextSmall" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextSmall"
            android:textStyle="italic"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/title_internet"
            android:textAppearance="@style/TextSmall"
            android:textStyle="italic"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/title_disabled"
            android:textAppearance="@style/TextSmall"
            android:textStyle="italic"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/title_access"
                    android:textAppearance="@style/TextTitle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLogging"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextSmall" />

                <Button
                    android:id="@+id/btnLogging"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/title_logging_configure" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/title_precedence"
                android:textAppearance="@style/TextSmall"
                android:textStyle="italic" />

            <eu.faircode.netguard.ExpandedListView
                android:id="@+id/lvAccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

            <ImageButton
                android:id="@+id/btnClearAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:src="?attr/iconDelete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/title_options"
                android:textAppearance="@style/TextTitle" />

            <CheckBox
                android:id="@+id/cbNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/title_notify"
                android:textAppearance="@style/TextSmall" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
