<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivSplash2"
        android:layout_width="62dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/iun"
        app:layout_constraintBottom_toTopOf="@+id/tvSplash2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvSplash2"
        android:layout_width="170dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:lineSpacingExtra="8dp"
        android:text="@string/disclaimer"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSplash2" />

    <TextView
        android:id="@+id/tvSubSplash2"
        android:layout_width="345dp"
        android:layout_height="285dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:lineSpacingExtra="8dp"
        android:text="This application is strictly private confidential and personal to its recipients and should not be copied distributed or reproduced in whole or in part nor passed to any third party"
        android:textAlignment="center"
        android:textColor="#A3A2AD"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnget2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSplash2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnget2"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/bgbtngreen"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="47dp"
        android:layout_height="44dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/an"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnget2"
        app:layout_constraintVertical_bias="0.647" />


</androidx.constraintlayout.widget.ConstraintLayout>